// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBox renders correctly 1`] = `
<DocumentFragment>
  .cache-5jm5b {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-b3zt23 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-5jm5b e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-14h2zyo"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-b3zt23"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-4136x1 e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly and triggers change on borderedbox click 1`] = `
<DocumentFragment>
  .cache-5jm5b {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-b3zt23 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-5jm5b e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
          for="radioborderedbox-choice1"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-14h2zyo"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice 1
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radioborderedbox-choice1"
            name="radioborderedbox"
            tabindex="0"
            type="radio"
            value="choice1"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-b3zt23"
    >
      Choice 1 description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-4136x1 e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-mwtskz {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #4f0599!important;
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-8wdcvm {
  fill: #390171;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-8wdcvm.cache-8wdcvm {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-b3zt23 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-mwtskz e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-8wdcvm"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="true"
            checked=""
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-b3zt23"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-4136x1 e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-14tqymt {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #c4c9d6;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-l2072z {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-yvpov9 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-yvpov9.cache-yvpov9 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-b3zt23 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-14tqymt e13z6rra3"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-l2072z"
          disabled=""
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-yvpov9"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            aria-disabled="true"
            class="cache-cujed6 e1duuirp1"
            disabled=""
            id="radio-choice"
            name="radio"
            style="pointer-events: none;"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-b3zt23"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-4136x1 e13z6rra1"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when error 1`] = `
<DocumentFragment>
  .cache-1ohchpo {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #dd3252!important;
  box-shadow: 0px 0px 0px 3px #DD325240;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1aftxkw {
  fill: #cc4e18;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1aftxkw.cache-1aftxkw {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-b3zt23 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="cache-1ohchpo e13z6rra3"
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-1aftxkw"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            class="cache-cujed6 e1duuirp1"
            id="radio-choice"
            name="radio"
            tabindex="0"
            type="radio"
            value="choice"
          />
        </label>
      </div>
    </div>
    <div
      class="e1g1zfwd0 cache-b3zt23"
    >
      Choice description
    </div>
  </div>
  .cache-ne47lv {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-ne47lv"
  >
    <div
      class="cache-4136x1 e13z6rra1"
    >
      Invalid value
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .cache-14tqymt {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #c4c9d6;
}

.cache-kmnzss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-l2072z {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-yvpov9 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-yvpov9.cache-yvpov9 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-b3zt23 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-oc0g9e {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #dd3252;
  color: #ffffff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<div
    class="cache-14tqymt e13z6rra3"
    disabled=""
  >
    <div
      class="cache-kmnzss e13z6rra2"
    >
      <div
        class="cache-1dp0kf7"
      >
        <label
          class="e1duuirp2 e1g1zfwd0 cache-l2072z"
          disabled=""
          for="radio-choice"
        >
          <div
            class="cache-tn3xtd e1duuirp3"
          >
            <svg
              class="e1duuirp4 etwatq50 cache-yvpov9"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              />
            </svg>
          </div>
          <div>
            Choice
          </div>
          <input
            aria-checked="false"
            aria-disabled="true"
            class="cache-cujed6 e1duuirp1"
            disabled=""
            id="radio-choice"
            name="radio"
            style="pointer-events: none;"
            type="radio"
            value="choice"
          />
        </label>
      </div>
      <span
        class="e1g1zfwd0 cache-b3zt23"
      >
        (something)
      </span>
       
      <span
        aria-label="warning"
        class="egvl2gp0 cache-oc0g9e"
        role="status"
      >
        Badge
      </span>
    </div>
    <div
      class="e1g1zfwd0 cache-b3zt23"
    >
      Choice description
    </div>
  </div>
  .cache-2himih {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-4136x1 {
  font-size: 12px;
  color: #a6102d;
  padding: 0 4px;
}

<div
    class="e13z6rra0 e14o3tsk0 cache-2himih"
  >
    <div
      class="cache-4136x1 e13z6rra1"
    />
  </div>
</DocumentFragment>
`;
